# civitas

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  WHITEPAPER.md  WHITEPAPER_V03.md  audit.toml
.github/workflows/: ci.yml
docs/: RISKS.md  TOKENOMICS.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/civ-constitution/: Cargo.toml
pallets/civ-constitution/src/: lib.rs
pallets/civ-governance/: Cargo.toml
pallets/civ-governance/src/: lib.rs  referral.rs
pallets/civ-identity/: Cargo.toml
pallets/civ-identity/src/: lib.rs
pallets/civ-monetary/: Cargo.toml
pallets/civ-monetary/src/: activity.rs  circuit_breaker.rs  decay_scheduler.rs  lib.rs
patches/serde/src/: lib.rs  std_error.rs
patches/serde/src/de/: impls.rs  mod.rs  value.rs
patches/serde/src/private/: de.rs  doc.rs  mod.rs
patches/serde/src/ser/: impls.rs  mod.rs
patches/serde_core/: Cargo.toml
patches/serde_core/src/: lib.rs
patches/serde_core/src/private/: doc.rs  size_hint.rs
patches/serde_derive/src/: de.rs
patches/serde_derive/src/internals/: attr.rs  case.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  genesis_config_presets.rs  lib.rs
runtime/src/configs/: mod.rs
