[package]
name        = "pallet-civ-governance"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
frame-support       = { workspace = true }
frame-system        = { workspace = true }
sp-runtime          = { workspace = true }
sp-std              = { workspace = true }
scale-info          = { workspace = true }
codec               = { workspace = true }
pallet-civ-identity = { workspace = true }

[dev-dependencies]
sp-io           = { workspace = true }
sp-core         = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std", "frame-system/std", "sp-runtime/std", "sp-std/std",
    "scale-info/std", "codec/std",
    "pallet-civ-identity/std", "pallet-balances/std",
]
