[package]
name        = "pallet-civ-identity"
version.workspace    = true
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
frame-support      = { workspace = true }
frame-system       = { workspace = true }
sp-runtime         = { workspace = true }
sp-std             = { workspace = true }
scale-info         = { workspace = true }
parity-scale-codec = { workspace = true }

[dev-dependencies]
sp-io  = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std", "frame-system/std", "sp-runtime/std",
    "sp-std/std", "scale-info/std", "parity-scale-codec/std",
]
